--- a/Lab2/bai3.html
+++ b/Lab2/bai3.html
@@ -22,144 +22,146 @@
         <li class="nav-item">
           <a class="nav-link" data-bs-toggle="tab" href="#login">Đăng nhập</a>
         </li>
-
-        <li class="nav-item"></li>
       </ul>
 
       <div class="tab-content">
-        <div id="register" class="container tab-pane active">
-          <br />
-          <div class="col-md-6">
-            <h3>Form đăng kí thông tin</h3>
-            <div class="card p-4">
-              <form>
-                <div class="mb-3">
-                  <label class="form-label">Họ và tên</label>
-                  <input
-                    type="text"
-                    class="form-control"
-                    placeholder="Nhập họ và tên"
-                  />
-                </div>
-
-                <div class="mb-3">
-                  <label class="form-label">Email</label>
-                  <input
-                    type="email"
-                    class="form-control"
-                    placeholder="Nhập email"
-                  />
-                </div>
-
-                <div class="mb-3">
-                  <label class="form-label">Số điện thoại</label>
-                  <input
-                    type="text"
-                    class="form-control"
-                    placeholder="Nhập số điện thoại"
-                  />
-                </div>
-
-                <div class="mb-3">
-                  <label class="form-label">Mật khẩu</label>
-                  <input
-                    type="password"
-                    class="form-control"
-                    placeholder="Nhập mật khẩu"
-                  />
-                </div>
-
-                <div class="mb-3">
-                  <label class="form-label">Xác nhận mật khẩu</label>
-                  <input
-                    type="password"
-                    class="form-control"
-                    placeholder="Nhập xác nhận mật khẩu"
-                  />
-                </div>
-
-                <div class="mb-3">
-                  <label class="form-label">Giới tính</label>
-                  <div class="form-check form-check-inline">
+        <div id="register" class="tab-pane fade show active">
+          <div class="row">
+            <div class="col-md-6">
+              <h3>Form đăng kí thông tin</h3>
+              <div class="card p-4">
+                <form>
+                  <div class="mb-3">
+                    <label class="form-label">Họ và tên</label>
                     <input
-                      type="radio"
-                      name="gender"
-                      class="form-check-input"
+                      type="text"
+                      class="form-control"
+                      placeholder="Nhập họ và tên"
                     />
-                    <label class="form-check-label">Nam</label>
                   </div>
 
-                  <div class="form-check form-check-inline">
+                  <div class="mb-3">
+                    <label class="form-label">Email</label>
                     <input
-                      type="radio"
-                      name="gender"
-                      class="form-check-input"
+                      type="email"
+                      class="form-control"
+                      placeholder="Nhập email"
                     />
-                    <label class="form-check-label">Nữ</label>
                   </div>
-                </div>
 
-                <div class="mb-3">
-                  <label class="form-label">Ngôn ngữ</label>
-                  <select class="form-select">
-                    <option selected>Chọn ngôn ngữ</option>
-                    <option>Tiếng Việt</option>
-                    <option>Tiếng Anh</option>
-                    <option>Tiếng Trung</option>
-                    <option>Tiếng Nhật</option>
-                    <option>Tiếng Hàn</option>
-                    <option>Tiếng Lào</option>
-                    <option>Tiếng Thái Lan</option>
-                  </select>
-                </div>
-
-                <div class="mb-3">
-                  <div class="form-check">
-                    <input type="checkbox" class="form-check-input" />
-                    <label class="form-check-label"
-                      >Tôi đồng ý với các điều khoản và điều kiện.</label
-                    >
+                  <div class="mb-3">
+                    <label class="form-label">Số điện thoại</label>
+                    <input
+                      type="text"
+                      class="form-control"
+                      placeholder="Nhập số điện thoại"
+                    />
                   </div>
-                </div>
 
-                <div class="mb-3">
-                  <button type="submit" class="btn btn-primary">Đăng kí</button>
-                </div>
-              </form>
+                  <div class="mb-3">
+                    <label class="form-label">Mật khẩu</label>
+                    <input
+                      type="password"
+                      class="form-control"
+                      placeholder="Nhập mật khẩu"
+                    />
+                  </div>
+
+                  <div class="mb-3">
+                    <label class="form-label">Xác nhận mật khẩu</label>
+                    <input
+                      type="password"
+                      class="form-control"
+                      placeholder="Nhập xác nhận mật khẩu"
+                    />
+                  </div>
+
+                  <div class="mb-3">
+                    <label class="form-label">Giới tính</label>
+                    <div class="form-check form-check-inline">
+                      <input
+                        type="radio"
+                        name="gender"
+                        class="form-check-input"
+                      />
+                      <label class="form-check-label">Nam</label>
+                    </div>
+
+                    <div class="form-check form-check-inline">
+                      <input
+                        type="radio"
+                        name="gender"
+                        class="form-check-input"
+                      />
+                      <label class="form-check-label">Nữ</label>
+                    </div>
+                  </div>
+
+                  <div class="mb-3">
+                    <label class="form-label">Ngôn ngữ</label>
+                    <select class="form-select">
+                      <option selected>Chọn ngôn ngữ</option>
+                      <option>Tiếng Việt</option>
+                      <option>Tiếng Anh</option>
+                      <option>Tiếng Trung</option>
+                      <option>Tiếng Nhật</option>
+                      <option>Tiếng Hàn</option>
+                      <option>Tiếng Lào</option>
+                      <option>Tiếng Thái Lan</option>
+                    </select>
+                  </div>
+
+                  <div class="mb-3">
+                    <div class="form-check">
+                      <input type="checkbox" class="form-check-input" />
+                      <label class="form-check-label"
+                        >Tôi đồng ý với các điều khoản và điều kiện.</label
+                      >
+                    </div>
+                  </div>
+
+                  <div class="mb-3">
+                    <button type="submit" class="btn btn-primary">
+                      Đăng kí
+                    </button>
+                  </div>
+                </form>
+              </div>
             </div>
           </div>
         </div>
 
-        <div id="login" class="container tab-pane fade">
-          <br />
-          <div class="col-md-6">
-            <h3>Form đăng nhập</h3>
-            <div class="card p-4">
-              <form>
-                <div class="mb-3">
-                  <label class="form-label">Email</label>
-                  <input
-                    type="email"
-                    class="form-control"
-                    placeholder="Nhập Email"
-                  />
-                </div>
+        <div id="login" class="tab-pane fade show active">
+          <div class="row">
+            <div class="col-md-6">
+              <h3>Form đăng nhập</h3>
+              <div class="card p-4">
+                <form>
+                  <div class="mb-3">
+                    <label class="form-label">Email</label>
+                    <input
+                      type="email"
+                      class="form-control"
+                      placeholder="Nhập Email"
+                    />
+                  </div>
 
-                <div class="mb-3">
-                  <label class="form-label">Mật khẩu</label>
-                  <input
-                    type="password"
-                    class="form-control"
-                    placeholder="Nhập mật khẩu"
-                  />
-                </div>
+                  <div class="mb-3">
+                    <label class="form-label">Mật khẩu</label>
+                    <input
+                      type="password"
+                      class="form-control"
+                      placeholder="Nhập mật khẩu"
+                    />
+                  </div>
 
-                <div class="mb-3">
-                  <button type="submit" class="btn btn-primary">
-                    Đăng nhập
-                  </button>
-                </div>
-              </form>
+                  <div class="mb-3">
+                    <button type="submit" class="btn btn-primary">
+                      Đăng nhập
+                    </button>
+                  </div>
+                </form>
+              </div>
             </div>
           </div>
         </div>
