--- a/Lab2/bai3.html
+++ b/Lab2/bai3.html
@@ -28,7 +28,9 @@
         <div id="register" class="tab-pane fade show active">
           <div class="row">
             <div class="col-md-6">
-              <h3>Form đăng kí thông tin</h3>
+              <br />
+              <h3 class="text-primary fw-bold">Đăng kí thông tin</h3>
+
               <div class="card p-4">
                 <form>
                   <div class="mb-3">
@@ -120,7 +122,7 @@
                     </div>
                   </div>
 
-                  <div class="mb-3">
+                  <div>
                     <button type="submit" class="btn btn-primary">
                       Đăng kí
                     </button>
@@ -131,10 +133,11 @@
           </div>
         </div>
 
-        <div id="login" class="tab-pane fade show active">
+        <div id="login" class="tab-pane fade">
           <div class="row">
             <div class="col-md-6">
-              <h3>Form đăng nhập</h3>
+              <br />
+              <h3 class="fw-bold text-primary">Đăng nhập</h3>
               <div class="card p-4">
                 <form>
                   <div class="mb-3">
@@ -155,7 +158,7 @@
                     />
                   </div>
 
-                  <div class="mb-3">
+                  <div>
                     <button type="submit" class="btn btn-primary">
                       Đăng nhập
                     </button>
