Lab 2: Bài 4: Thêm validate cho các input

--- a/Lab2/bai4.html
+++ b/Lab2/bai4.html
@@ -27,7 +27,7 @@
       <div class="modal-dialog modal-lg">
         <div class="modal-content">
           <div class="modal-header">
-            <h4 class="modal-title">Đăng nhập / Đăng kí</h4>
+            <h4 class="modal-title fw-bold">Đăng nhập / Đăng kí</h4>
             <button
               type="button"
               class="btn-close"
@@ -64,14 +64,19 @@
                       </h3>
                       <br />
                       <div class="card p-4">
-                        <form>
+                        <form class="was-validated">
                           <div class="mb-3">
                             <label class="form-label">Họ và tên</label>
                             <input
                               type="text"
                               class="form-control"
                               placeholder="Nhập họ và tên"
+                              required
                             />
+                            <div class="valid-feedback">Hợp lệ</div>
+                            <div class="invalid-feedback">
+                              Vui lòng nhập họ và tên!
+                            </div>
                           </div>
 
                           <div class="mb-3">
@@ -80,7 +85,12 @@
                               type="email"
                               class="form-control"
                               placeholder="Nhập email"
+                              required
                             />
+                            <div class="valid-feedback">Hợp lệ</div>
+                            <div class="invalid-feedback">
+                              Vui lòng nhập Email!
+                            </div>
                           </div>
 
                           <div class="mb-3">
@@ -89,7 +99,13 @@
                               type="text"
                               class="form-control"
                               placeholder="Nhập số điện thoại"
+                              pattern="[0-9]{10}"
+                              required
                             />
+                            <div class="valid-feedback">Hợp lệ</div>
+                            <div class="invalid-feedback">
+                              Số điện thoại phải gồm đúng 10 chữ số!
+                            </div>
                           </div>
 
                           <div class="mb-3">
@@ -98,7 +114,12 @@
                               type="password"
                               class="form-control"
                               placeholder="Nhập mật khẩu"
+                              required
                             />
+                            <div class="valid-feedback">Hợp lệ</div>
+                            <div class="invalid-feedback">
+                              Vui lòng nhập mật khẩu!
+                            </div>
                           </div>
 
                           <div class="mb-3">
@@ -107,7 +128,12 @@
                               type="password"
                               class="form-control"
                               placeholder="Nhập xác nhận mật khẩu"
+                              required
                             />
+                            <div class="valid-feedback">Hợp lệ</div>
+                            <div class="invalid-feedback">
+                              Vui lòng nhập xác nhận mật khẩu!
+                            </div>
                           </div>
 
                           <div class="mb-3">
@@ -117,6 +143,7 @@
                                 type="radio"
                                 name="gender"
                                 class="form-check-input"
+                                required
                               />
                               <label class="form-check-label">Nam</label>
                             </div>
@@ -129,12 +156,18 @@
                               />
                               <label class="form-check-label">Nữ</label>
                             </div>
+                            <div class="valid-feedback">Hợp lệ</div>
+                            <div class="invalid-feedback d-block">
+                              Vui lòng chọn giới tính!
+                            </div>
                           </div>
 
                           <div class="mb-3">
                             <label class="form-label">Ngôn ngữ</label>
-                            <select class="form-select">
-                              <option selected>Chọn ngôn ngữ</option>
+                            <select class="form-select" required>
+                              <option value="" selected disabled>
+                                Chọn ngôn ngữ
+                              </option>
                               <option>Tiếng Việt</option>
                               <option>Tiếng Anh</option>
                               <option>Tiếng Trung</option>
@@ -143,16 +176,27 @@
                               <option>Tiếng Lào</option>
                               <option>Tiếng Thái Lan</option>
                             </select>
+
+                            <div class="valid-feedback">Hợp lệ</div>
+                            <div class="invalid-feedback">
+                              Vui lòng chọn ngôn ngữ!
+                            </div>
                           </div>
 
                           <div class="mb-3">
                             <div class="form-check">
-                              <input type="checkbox" class="form-check-input" />
+                              <input
+                                type="checkbox"
+                                class="form-check-input"
+                                required
+                              />
                               <label class="form-check-label"
                                 >Tôi đồng ý với các điều khoản và điều
                                 kiện.</label
                               >
                             </div>
+                            <div class="valid-feedback">Hợp lệ</div>
+                            <div class="invalid-feedback">Vui lòng đồng ý!</div>
                           </div>
 
                           <div>
@@ -173,14 +217,19 @@
                       <h3 class="text-danger text-center fw-bold">Đăng nhập</h3>
                       <br />
                       <div class="card p-4">
-                        <form>
+                        <form class="was-validated">
                           <div class="mb-3">
                             <label class="form-label">Email</label>
                             <input
                               type="email"
                               class="form-control"
                               placeholder="Nhập Email"
+                              required
                             />
+                            <div class="valid-feedback">Hợp lệ</div>
+                            <div class="invalid-feedback">
+                              Vui lòng nhập Email!
+                            </div>
                           </div>
 
                           <div class="mb-3">
@@ -189,7 +238,12 @@
                               type="password"
                               class="form-control"
                               placeholder="Nhập mật khẩu"
+                              required
                             />
+                            <div class="valid-feedback">Hợp lệ</div>
+                            <div class="invalid-feedback">
+                              Vui lòng nhập mật khẩu!
+                            </div>
                           </div>
 
                           <div>
