--- a/Lab2/bai2.html
+++ b/Lab2/bai2.html
@@ -14,16 +14,19 @@
     <div class="container mt-4">
       <div class="row g-4">
         <div class="col-md-6">
-          <h3>Form đăng kí thông tin</h3>
+          <h3 class="text-primary fw-bold">Đăng kí thông tin</h3>
           <div class="card p-4">
-            <form>
+            <form class="was-validated">
               <div class="mb-3">
                 <label class="form-label">Họ và tên</label>
                 <input
                   type="text"
                   class="form-control"
                   placeholder="Nhập họ và tên"
+                  required
                 />
+                <div class="valid-feedback">Hợp lệ</div>
+                <div class="invalid-feedback">Vui lòng nhập họ và tên!</div>
               </div>
 
               <div class="mb-3">
@@ -32,7 +35,10 @@
                   type="email"
                   class="form-control"
                   placeholder="Nhập email"
+                  required
                 />
+                <div class="valid-feedback">Hợp lệ</div>
+                <div class="invalid-feedback">Vui lòng nhập Email!</div>
               </div>
 
               <div class="mb-3">
@@ -41,7 +47,13 @@
                   type="text"
                   class="form-control"
                   placeholder="Nhập số điện thoại"
+                  pattern="[0-9]{10}"
+                  required
                 />
+                <div class="valid-feedback">Hợp lệ</div>
+                <div class="invalid-feedback">
+                  Số điện thoại phải gồm đúng 10 chữ số!
+                </div>
               </div>
 
               <div class="mb-3">
@@ -50,7 +62,10 @@
                   type="password"
                   class="form-control"
                   placeholder="Nhập mật khẩu"
+                  required
                 />
+                <div class="valid-feedback">Hợp lệ</div>
+                <div class="invalid-feedback">Vui lòng nhập mật khẩu!</div>
               </div>
 
               <div class="mb-3">
@@ -59,13 +74,23 @@
                   type="password"
                   class="form-control"
                   placeholder="Nhập xác nhận mật khẩu"
+                  required
                 />
+                <div class="valid-feedback">Hợp lệ</div>
+                <div class="invalid-feedback">
+                  Vui lòng nhập xác nhận mật khẩu!
+                </div>
               </div>
 
               <div class="mb-3">
                 <label class="form-label">Giới tính</label>
                 <div class="form-check form-check-inline">
-                  <input type="radio" name="gender" class="form-check-input" />
+                  <input
+                    type="radio"
+                    name="gender"
+                    class="form-check-input"
+                    required
+                  />
                   <label class="form-check-label">Nam</label>
                 </div>
 
@@ -73,12 +98,16 @@
                   <input type="radio" name="gender" class="form-check-input" />
                   <label class="form-check-label">Nữ</label>
                 </div>
+                <div class="valid-feedback">Hợp lệ</div>
+                <div class="invalid-feedback d-block">
+                  Vui lòng chọn giới tính!
+                </div>
               </div>
 
               <div class="mb-3">
                 <label class="form-label">Ngôn ngữ</label>
-                <select class="form-select">
-                  <option selected>Chọn ngôn ngữ</option>
+                <select class="form-select" required>
+                  <option value="" selected disabled>Chọn ngôn ngữ</option>
                   <option>Tiếng Việt</option>
                   <option>Tiếng Anh</option>
                   <option>Tiếng Trung</option>
@@ -87,18 +116,23 @@
                   <option>Tiếng Lào</option>
                   <option>Tiếng Thái Lan</option>
                 </select>
+
+                <div class="valid-feedback">Hợp lệ</div>
+                <div class="invalid-feedback">Vui lòng chọn ngôn ngữ!</div>
               </div>
 
               <div class="mb-3">
                 <div class="form-check">
-                  <input type="checkbox" class="form-check-input" />
+                  <input type="checkbox" class="form-check-input" required />
                   <label class="form-check-label"
                     >Tôi đồng ý với các điều khoản và điều kiện.</label
                   >
                 </div>
+                <div class="valid-feedback">Hợp lệ</div>
+                <div class="invalid-feedback">Vui lòng đồng ý!</div>
               </div>
 
-              <div class="mb-3">
+              <div>
                 <button type="submit" class="btn btn-primary">Đăng kí</button>
               </div>
             </form>
@@ -106,16 +140,19 @@
         </div>
 
         <div class="col-md-6">
-          <h3>Form đăng nhập</h3>
+          <h3 class="text-primary fw-bold">Đăng nhập</h3>
           <div class="card p-4">
-            <form>
+            <form class="was-validated">
               <div class="mb-3">
                 <label class="form-label">Email</label>
                 <input
                   type="email"
                   class="form-control"
                   placeholder="Nhập Email"
+                  required
                 />
+                <div class="valid-feedback">Hợp lệ</div>
+                <div class="invalid-feedback">Vui lòng nhập Email!</div>
               </div>
 
               <div class="mb-3">
@@ -124,10 +161,13 @@
                   type="password"
                   class="form-control"
                   placeholder="Nhập mật khẩu"
+                  required
                 />
+                <div class="valid-feedback">Hợp lệ</div>
+                <div class="invalid-feedback">Vui lòng nhập mật khẩu!</div>
               </div>
 
-              <div class="mb-3">
+              <div>
                 <button type="submit" class="btn btn-primary">Đăng nhập</button>
               </div>
             </form>
