--- a/Lab3/index.html
+++ b/Lab3/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -9,7 +9,13 @@
       rel="stylesheet"
     />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+      integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
 
     <style>
       .blog-aside-img {
@@ -105,27 +111,50 @@
     <div class="container mt-3">
       <div id="carouselExampleDark" class="carousel carousel-dark slide">
         <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"></button>
-          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1"></button>
-          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2"></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleDark"
+            data-bs-slide-to="0"
+            class="active"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleDark"
+            data-bs-slide-to="1"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleDark"
+            data-bs-slide-to="2"
+          ></button>
         </div>
 
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="images/banner1.jpg" class="d-block w-100" alt="">
+            <img src="images/banner1.jpg" class="d-block w-100" alt="" />
           </div>
           <div class="carousel-item">
-            <img src="images/banner2.jpg" class="d-block w-100" alt="">
+            <img src="images/banner2.jpg" class="d-block w-100" alt="" />
           </div>
           <div class="carousel-item">
-            <img src="images/banner3.jpg" class="d-block w-100" alt="">
+            <img src="images/banner3.jpg" class="d-block w-100" alt="" />
           </div>
         </div>
 
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#carouselExampleDark"
+          data-bs-slide="prev"
+        >
           <span class="carousel-control-prev-icon"></span>
         </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#carouselExampleDark"
+          data-bs-slide="next"
+        >
           <span class="carousel-control-next-icon"></span>
         </button>
       </div>
@@ -172,6 +201,55 @@
               <span class="badge bg-primary rounded-pill">99</span>
             </li>
           </ul>
+
+          <div class="mt-4">
+            <ul class="nav nav-tabs" role="tablist">
+              <li class="nav-item">
+                <button
+                  class="nav-link active"
+                  data-bs-target="#read"
+                  data-bs-toggle="tab"
+                  type="button"
+                >
+                  Đọc nhiều
+                </button>
+              </li>
+              <li class="nav-item">
+                <button
+                  class="nav-link"
+                  data-bs-target="#view"
+                  data-bs-toggle="tab"
+                  type="button"
+                >
+                  Xem nhiều
+                </button>
+              </li>
+            </ul>
+
+            <div class="tab-content border border-top-0 p-2">
+              <div class="tab-pane fade show active" id="read">
+                <ul class="list-group list-group-flush">
+                  <li class="list-group-item small">
+                    Bí quyết sống tích cực mỗi ngày
+                  </li>
+                  <li class="list-group-item small">
+                    Bí quyết sống vui mỗi ngày
+                  </li>
+                  <li class="list-group-item small">
+                    Bí quyết sống hạnh phúc mỗi ngày
+                  </li>
+                </ul>
+              </div>
+              <div class="tab-pane fade show" id="view">
+                <ul class="list-group list-group-flush">
+                  <li class="list-group-item small">Tập thể dục mỗi ngày</li>
+                  <li class="list-group-item small">Chế độ ăn uống</li>
+                  <li class="list-group-item small">Tập yoga</li>
+                  <li class="list-group-item small">Chạy bộ</li>
+                </ul>
+              </div>
+            </div>
+          </div>
         </aside>
 
         <main class="col-sm-8">
@@ -266,15 +344,103 @@
               <button class="btn btn-info text-white px-4">Xem thêm</button>
             </div>
           </div>
+
+          <div class="mt-4">
+            <h3 class="text-info text-center mb-4">Video - Đừng bỏ lỡ</h3>
+            <div class="row g-3">
+              <div class="col-md-4">
+                <div class="card h-100">
+                  <img
+                    src="images/video1.jpg"
+                    alt="Video 1"
+                    class="card-img-top"
+                  />
+                  <div class="card-body">
+                    <h6 class="card-title">Bí quyết sống khỏe mỗi ngày</h6>
+                    <p class="small text-muted">Bí quyết sống khỏe mỗi ngày</p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-md-4">
+                <div class="card h-100">
+                  <img
+                    src="images/video2.jpg"
+                    alt="Video 2"
+                    class="card-img-top"
+                  />
+                  <div class="card-body">
+                    <h6 class="card-title">Bí quyết sống khỏe mỗi ngày</h6>
+                    <p class="small text-muted">Bí quyết sống khỏe mỗi ngày</p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-md-4">
+                <div class="card h-100">
+                  <img
+                    src="images/video3.jpg"
+                    alt="Video 3"
+                    class="card-img-top"
+                  />
+                  <div class="card-body">
+                    <h6 class="card-title">Bí quyết sống khỏe mỗi ngày</h6>
+                    <p class="small text-muted">Bí quyết sống khỏe mỗi ngày</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <br />
+            <div class="row g-3">
+              <div class="col-md-4">
+                <div class="card h-100">
+                  <img
+                    src="images/video1.jpg"
+                    alt="Video 1"
+                    class="card-img-top"
+                  />
+                  <div class="card-body">
+                    <h6 class="card-title">Bí quyết sống khỏe mỗi ngày</h6>
+                    <p class="small text-muted">Bí quyết sống khỏe mỗi ngày</p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-md-4">
+                <div class="card h-100">
+                  <img
+                    src="images/video2.jpg"
+                    alt="Video 2"
+                    class="card-img-top"
+                  />
+                  <div class="card-body">
+                    <h6 class="card-title">Bí quyết sống khỏe mỗi ngày</h6>
+                    <p class="small text-muted">Bí quyết sống khỏe mỗi ngày</p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-md-4">
+                <div class="card h-100">
+                  <img
+                    src="images/video3.jpg"
+                    alt="Video 3"
+                    class="card-img-top"
+                  />
+                  <div class="card-body">
+                    <h6 class="card-title">Bí quyết sống khỏe mỗi ngày</h6>
+                    <p class="small text-muted">Bí quyết sống khỏe mỗi ngày</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </main>
       </div>
     </div>
 
     <footer class="bg-dark text-white mt-4 p-4">
-        <p class="text-center mb-0">
-          Nâng cao sức khỏe – Cân bằng cuộc sống 
-        </p>
-      </div>
+      <p class="text-center mb-0">Nâng cao sức khỏe – Cân bằng cuộc sống</p>
     </footer>
   </body>
 </html>
