--- a/Lab3/index.html
+++ b/Lab3/index.html
@@ -434,6 +434,9 @@
                 </div>
               </div>
             </div>
+            <div class="text-center mt-3">
+              <button class="btn btn-info text-white px-4">Xem thêm</button>
+            </div>
           </div>
         </main>
       </div>
