Lab 3: Thêm Detail, Thêm đăng nhập đăng kí cho trang chủ

--- a/Lab3/Detail4.html
+++ b/Lab3/Detail4.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Trang chủ</title>
+    <title>Detail</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -34,7 +34,7 @@
   <body>
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
       <div class="container">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="index.html">
           <img
             src="images/logo-energy-pilates.png"
             alt="Logo"
@@ -53,6 +53,11 @@
 
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
           <ul class="navbar-nav me-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">
+                <i class="fa-solid fa-house"></i>Trang chủ
+              </a>
+            </li>
             <li class="nav-item">
               <a class="nav-link" href="Post.html">
                 <i class="fa-solid fa-list"></i> Bài viết
@@ -128,16 +133,33 @@
             data-bs-slide-to="2"
           ></button>
         </div>
-
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="images/banner1.jpg" class="d-block w-100" alt="" />
+            <a href="Detail1.html" class="text-decoration-none text-dark">
+              <img
+                src="images/banner1.jpg"
+                class="d-block w-100"
+                alt="Hình 1"
+              />
+            </a>
           </div>
           <div class="carousel-item">
-            <img src="images/banner2.jpg" class="d-block w-100" alt="" />
+            <a href="Detail2.html" class="text-decoration-none text-dark">
+              <img
+                src="images/banner2.jpg"
+                class="d-block w-100"
+                alt="Hình 2"
+              />
+            </a>
           </div>
           <div class="carousel-item">
-            <img src="images/banner3.jpg" class="d-block w-100" alt="" />
+            <a href="Detail3.html" class="text-decoration-none text-dark">
+              <img
+                src="images/banner3.jpg"
+                class="d-block w-100"
+                alt="Hình 3"
+              />
+            </a>
           </div>
         </div>
 
@@ -163,26 +185,32 @@
     <div class="container mt-4">
       <div class="row">
         <div class="col-md-8">
-          <h4 class="text-info fw-bold">
-            Phương pháp tập Pilates giúp phục hồi chấn thương cột sống
+          <h4 class="text-danger fw-bold">
+            Tập thể dục là một hoạt động rất có lợi cho sức khỏe
           </h4>
           <img
-            src="images/tap-piltes.jpg"
-            alt="Phương pháp tập Pilates giúp phục hồi chấn thương cột sống"
+            src="images/tap-the-duc-luc.jpg"
+            alt="Tập thể dục"
             class="img-fluid my-3"
           />
           <p>
-            Tập Pilates có thể cải thiện khả năng vận động, giúp giảm đau lưng
-            và phục hồi chức năng cột sống hiệu quả...
+            Chính đồng hồ sinh học của cơ thể sẽ quyết định bạn là “cú đêm” hay
+            ưa dậy sớm. Những nhịp sinh học này tác động đến các chức năng của
+            cơ thể như chỉ số huyết áp, nhiệt độ cơ thể, mức độ hormone hay nhịp
+            tim, tất cả đều đóng vai trò quan trọng trong việc xác định cơ thể
+            bạn có sẵn sàng tập thể dục hay không.
           </p>
 
           <p>
-            Pilates giúp phục hồi chức năng cột sống nhanh chóng thông qua các
-            bài tập có kiểm soát, tăng sức mạnh cơ lõi.
+            Sử dụng đồng hồ sinh học của cơ thể để biết khi nào nên tập thể dục,
+            đi bộ hoặc đến phòng tập gym là ý tưởng hay, tuy nhiên bạn sẽ phải
+            cân nhắc những yếu tố bên ngoài như lịch trình công việc, gia đình,
+            thời gian rảnh rỗi nữa.
           </p>
+          <h5 class="fw-bold">Đặc điểm của tập thể dục buổi sáng</h5>
           <img
-            src="images/tap-pilates1.jpg"
-            alt="Phương pháp tập Pilates giúp phục hồi chấn thương cột sống"
+            src="images/tap-the-duc2.jpg"
+            alt="Tập thể dục"
             class="img-fluid my-3"
           />
           <ul>
@@ -194,8 +222,11 @@
 
           <h6 class="fw-bold">Lời kết</h6>
           <p>
-            Việc tập luyện Pilates đúng cách sẽ giúp phục hồi cột sống, cải
-            thiện sức khỏe và chất lượng cuộc sống.
+            Các chuyên gia cho rằng, nếu bạn là người khó thiết lập thói quen
+            thì buổi sáng có thể là thời gian tốt nhất để tập thể dục. Nguyên
+            nhân là nếu tranh thủ tập buổi sáng thì bạn sẽ không bị áp lực về
+            thời gian, không bị những công việc trong ngày cuốn trôi đi ý tưởng
+            tập thể dục, từ đó giữ được lịch tập thường xuyên hơn.
           </p>
         </div>
 
