--- a/Lab3/Post.html
+++ b/Lab3/Post.html
@@ -57,7 +57,7 @@
   <body>
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
       <div class="container">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="index.html">
           <img
             src="images/logo-energy-pilates.png"
             alt="Logo"
@@ -77,7 +77,12 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
           <ul class="navbar-nav me-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#">
+              <a class="nav-link" href="index.html">
+                <i class="fa-solid fa-house"></i>Trang chủ
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Post.html">
                 <i class="fa-solid fa-list"></i> Bài viết
               </a>
             </li>
@@ -154,13 +159,31 @@
 
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="images/banner1.jpg" class="d-block w-100" alt="" />
+            <a href="Detail1.html" class="text-decoration-none text-dark">
+              <img
+                src="images/banner1.jpg"
+                class="d-block w-100"
+                alt="Hình 1"
+              />
+            </a>
           </div>
           <div class="carousel-item">
-            <img src="images/banner2.jpg" class="d-block w-100" alt="" />
+            <a href="Detail2.html" class="text-decoration-none text-dark">
+              <img
+                src="images/banner2.jpg"
+                class="d-block w-100"
+                alt="Hình 2"
+              />
+            </a>
           </div>
           <div class="carousel-item">
-            <img src="images/banner3.jpg" class="d-block w-100" alt="" />
+            <a href="Detail3.html" class="text-decoration-none text-dark">
+              <img
+                src="images/banner3.jpg"
+                class="d-block w-100"
+                alt="Hình 3"
+              />
+            </a>
           </div>
         </div>
 
@@ -258,46 +281,144 @@
               <div class="box-body">
                 <div class="row g-3">
                   <div class="col-md-6">
-                    <div class="card h-100">
-                      <div class="card-header bg-white fw-semibold">
-                        Phương pháp tập Pilates giúp phục hồi cột sống
-                        <span class="float-end text-muted">
-                          <i class="fa-regular fa-comment"></i>16
-                        </span>
+                    <a
+                      href="Detail1.html"
+                      class="text-decoration-none text-dark"
+                    >
+                      <div class="card h-100">
+                        <div class="card-header bg-white fw-semibold">
+                          Tập Pilates là phương pháp luyện tập kết hợp kiểm soát
+                          hơi thở, chuyển động có ý thức.
+                          <span class="float-end text-muted">
+                            <i class="fa-regular fa-comment"></i>16
+                          </span>
+                        </div>
+                        <img
+                          src="images/tap-piltes.jpg"
+                          alt="Tập Pilates"
+                          class="card-img-top"
+                        />
+                        <div class="card-body">
+                          <p class="small">
+                            Tập Pilates là phương pháp luyện tập kết hợp kiểm
+                            soát hơi thở, chuyển động có ý thức, tập trung vào
+                            nhóm cơ trung tâm (core) để tăng cường sức mạnh, sự
+                            linh hoạt, cải thiện tư thế và vóc dáng, có thể tập
+                            trên thảm hoặc thiết bị chuyên dụng. Các bài tập này
+                            giúp cơ thể săn chắc, giảm mỡ bụng, thư giãn tinh
+                            thần và rất phù hợp cho người mới bắt đầu, ít vận
+                            động, hoặc phục hồi sau chấn thương.
+                          </p>
+                        </div>
                       </div>
-                      <img
-                        src="images/tap-piltes.jpg"
-                        alt="Tập Pilates"
-                        class="card-img-top"
-                      />
-                      <div class="card-body">
-                        <p class="text-muted small">
-                          Pilates giúp cải thiện linh hoạt, giảm đau lưng và
-                          phục hồi cột sống.
-                        </p>
-                      </div>
-                    </div>
+                    </a>
                   </div>
                   <div class="col-md-6">
-                    <div class="card h-100">
-                      <div class="card-header bg-white fw-semibold">
-                        Phương pháp tập Pilates giúp phục hồi cột sống
-                        <span class="float-end text-muted">
-                          <i class="fa-regular fa-comment"></i>16
-                        </span>
+                    <a
+                      href="Detail4.html"
+                      class="text-decoration-none text-dark"
+                    >
+                      <div class="card h-100">
+                        <div class="card-header bg-white fw-semibold">
+                          Tập thể dục là một hoạt động rất có lợi cho sức khỏe
+                          <span class="float-end text-muted">
+                            <i class="fa-regular fa-comment"></i>16
+                          </span>
+                        </div>
+                        <img
+                          src="images/tap-the-duc2.jpg"
+                          alt="Tập Pilates"
+                          class="card-img-top"
+                        />
+                        <div class="card-body">
+                          <p class="small">
+                            Chính đồng hồ sinh học của cơ thể sẽ quyết định bạn
+                            là “cú đêm” hay ưa dậy sớm. Những nhịp sinh học này
+                            tác động đến các chức năng của cơ thể như chỉ số
+                            huyết áp, nhiệt độ cơ thể, mức độ hormone hay nhịp
+                            tim, tất cả đều đóng vai trò quan trọng trong việc
+                            xác định cơ thể bạn có sẵn sàng tập thể dục hay
+                            không.
+                          </p>
+                          <p class="small">
+                            Sử dụng đồng hồ sinh học của cơ thể để biết khi nào
+                            nên tập thể dục, đi bộ hoặc đến phòng tập gym là ý
+                            tưởng hay, tuy nhiên bạn sẽ phải cân nhắc những yếu
+                            tố bên ngoài như lịch trình công việc, gia đình,
+                            thời gian rảnh rỗi nữa.
+                          </p>
+                        </div>
                       </div>
-                      <img
-                        src="images/tap-piltes.jpg"
-                        alt="Tập Pilates"
-                        class="card-img-top"
-                      />
-                      <div class="card-body">
-                        <p class="text-muted small">
-                          Pilates giúp cải thiện linh hoạt, giảm đau lưng và
-                          phục hồi cột sống.
-                        </p>
+                    </a>
+                  </div>
+                </div>
+                <br />
+                <div class="row g-3">
+                  <div class="col-md-6">
+                    <a
+                      href="Detail2.html"
+                      class="text-decoration-none text-dark"
+                    >
+                      <div class="card h-100">
+                        <div class="card-header bg-white fw-semibold">
+                          Tim mạch là nhóm bệnh lý liên quan đến tim và mạch máu
+                          <span class="float-end text-muted">
+                            <i class="fa-regular fa-comment"></i>16
+                          </span>
+                        </div>
+                        <img
+                          src="images/tim-mach.jpg"
+                          alt="Tập Pilates"
+                          class="card-img-top"
+                        />
+                        <div class="card-body">
+                          <p class="small">
+                            Tim mạch là nhóm bệnh lý liên quan đến tim và mạch
+                            máu, bao gồm các bệnh như cao huyết áp, bệnh mạch
+                            vành, đột quỵ, suy tim, thấp tim, v.v., đang là
+                            nguyên nhân gây tử vong hàng đầu thế giới, có xu
+                            hướng trẻ hóa do lối sống không lành mạnh (hút
+                            thuốc, ít vận động, ăn uống kém), nhưng có thể phòng
+                            ngừa và kiểm soát bằng thay đổi lối sống, thăm khám
+                            định kỳ.
+                          </p>
+                        </div>
                       </div>
-                    </div>
+                    </a>
+                  </div>
+                  <div class="col-md-6">
+                    <a
+                      href="Detail3.html"
+                      class="text-decoration-none text-dark"
+                    >
+                      <div class="card h-100">
+                        <div class="card-header bg-white fw-semibold">
+                          Quản trị Marketing (Marketing Management) là quá trình
+                          phân tích, lập kế hoạch
+                          <span class="float-end text-muted">
+                            <i class="fa-regular fa-comment"></i>16
+                          </span>
+                        </div>
+                        <img
+                          src="images/Marketing.png"
+                          alt="Tập Pilates"
+                          class="card-img-top"
+                        />
+                        <div class="card-body">
+                          <p class="small">
+                            Quản trị Marketing (Marketing Management) là quá
+                            trình phân tích, lập kế hoạch, thực hiện và kiểm
+                            soát các hoạt động tiếp thị nhằm xây dựng, củng cố
+                            và duy trì những trao đổi có lợi với khách hàng mục
+                            tiêu, qua đó đạt được mục tiêu kinh doanh của doanh
+                            nghiệp, bao gồm việc hiểu thị trường, phát triển
+                            chiến lược, quản lý các yếu tố Marketing Mix (4P) và
+                            điều phối các bộ phận để tạo ra giá trị cho khách
+                            hàng.
+                          </p>
+                        </div>
+                      </div>
+                    </a>
                   </div>
                 </div>
               </div>
@@ -310,7 +431,7 @@
                   <li class="page-item"><a class="page-link" href="#">2</a></li>
                   <li class="page-item"><a class="page-link" href="#">3</a></li>
                   <li class="page-item">
-                    <a class="page-link" href="#">>&raquo;</a>
+                    <a class="page-link" href="#">&raquo;</a>
                   </li>
                 </ul>
               </div>
