--- a/Lab3/index.html
+++ b/Lab3/index.html
@@ -8,7 +8,6 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
@@ -34,7 +33,7 @@
   <body>
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
       <div class="container">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="index.html">
           <img
             src="images/logo-energy-pilates.png"
             alt="Logo"
@@ -54,7 +53,12 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
           <ul class="navbar-nav me-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#">
+              <a class="nav-link" href="index.html">
+                <i class="fa-solid fa-house"></i>Trang chủ
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Post.html">
                 <i class="fa-solid fa-list"></i> Bài viết
               </a>
             </li>
@@ -87,10 +91,22 @@
                 <i class="fa-solid fa-user"></i> Tài khoản
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Đăng nhập</a></li>
+                <li>
+                  <a
+                    class="dropdown-item"
+                    data-bs-toggle="modal"
+                    data-bs-target="#accountModal"
+                    >Đăng nhập</a
+                  >
+                </li>
                 <li><a class="dropdown-item" href="#">Quên mật khẩu</a></li>
                 <li>
-                  <a class="dropdown-item" href="#">Đăng ký thành viên</a>
+                  <a
+                    class="dropdown-item"
+                    data-bs-toggle="modal"
+                    data-bs-target="#accountModal"
+                    >Đăng ký thành viên</a
+                  >
                 </li>
               </ul>
             </li>
@@ -131,13 +147,31 @@
 
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="images/banner1.jpg" class="d-block w-100" alt="" />
+            <a href="Detail1.html" class="text-decoration-none text-dark">
+              <img
+                src="images/banner1.jpg"
+                class="d-block w-100"
+                alt="Hình 1"
+              />
+            </a>
           </div>
           <div class="carousel-item">
-            <img src="images/banner2.jpg" class="d-block w-100" alt="" />
+            <a href="Detail2.html" class="text-decoration-none text-dark">
+              <img
+                src="images/banner2.jpg"
+                class="d-block w-100"
+                alt="Hình 2"
+              />
+            </a>
           </div>
           <div class="carousel-item">
-            <img src="images/banner3.jpg" class="d-block w-100" alt="" />
+            <a href="Detail3.html" class="text-decoration-none text-dark">
+              <img
+                src="images/banner3.jpg"
+                class="d-block w-100"
+                alt="Hình 3"
+              />
+            </a>
           </div>
         </div>
 
@@ -181,7 +215,8 @@
             </div>
           </div>
 
-          <h5 class="text-info">Chuyên mục</h5>
+          <div class="mt-4"></div>
+          <h3 class="text-info mb-4">Chuyên mục</h3>
           <ul class="list-group">
             <li
               class="list-group-item active d-flex justify-content-between align-items-center bg-info border-info"
@@ -257,26 +292,28 @@
           <div class="card p-3 bg-light">
             <div class="row">
               <div class="col-md-7">
-                <div class="card h-100">
-                  <h6 class="p-2 fw-bold">
-                    Phương pháp tập Pilates giúp phục hồi chấn thương cột sống
-                    <small class="text-muted"
-                      ><i class="fa-solid fa-comment"></i> 16</small
-                    >
-                  </h6>
-                  <img
-                    src="images/tap-piltes.jpg"
-                    class="card-img-top"
-                    alt="Pilates"
-                  />
-                  <div class="card-body px-0">
-                    <p class="card-text small">
-                      Ngoài việc giúp duy trì vóc dáng, cải thiện sự linh hoạt,
-                      dẻo dai cho người tập, Pilates giúp cơ bắp và các khớp mọc
-                      dài hơn, kéo giãn hơn...
-                    </p>
+                <a href="Detail1.html" class="text-decoration-none text-dark">
+                  <div class="card h-100">
+                    <h6 class="p-2 fw-bold">
+                      Phương pháp tập Pilates giúp phục hồi chấn thương cột sống
+                      <small class="text-muted"
+                        ><i class="fa-solid fa-comment"></i> 16</small
+                      >
+                    </h6>
+                    <img
+                      src="images/tap-piltes.jpg"
+                      class="card-img-top"
+                      alt="Pilates"
+                    />
+                    <div class="card-body px-0">
+                      <p class="card-text small">
+                        Ngoài việc giúp duy trì vóc dáng, cải thiện sự linh
+                        hoạt, dẻo dai cho người tập, Pilates giúp cơ bắp và các
+                        khớp mọc dài hơn, kéo giãn hơn...
+                      </p>
+                    </div>
                   </div>
-                </div>
+                </a>
               </div>
 
               <div class="col-md-5">
@@ -348,7 +385,7 @@
           <div class="mt-4">
             <h3 class="text-info text-center mb-4">Video - Đừng bỏ lỡ</h3>
             <div class="row g-3">
-              <div class="col-md-4">
+              <div class="col-md-6">
                 <div class="card h-100">
                   <img
                     src="images/video1.jpg"
@@ -362,7 +399,7 @@
                 </div>
               </div>
 
-              <div class="col-md-4">
+              <div class="col-md-6">
                 <div class="card h-100">
                   <img
                     src="images/video2.jpg"
@@ -376,11 +413,24 @@
                 </div>
               </div>
 
-              <div class="col-md-4">
+              <div class="col-md-6">
                 <div class="card h-100">
                   <img
                     src="images/video3.jpg"
                     alt="Video 3"
+                    class="card-img-top"
+                  />
+                  <div class="card-body">
+                    <h6 class="card-title">Bí quyết sống khỏe mỗi ngày</h6>
+                    <p class="small text-muted">Bí quyết sống khỏe mỗi ngày</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="card h-100">
+                  <img
+                    src="images/video2.jpg"
+                    alt="Video 2"
                     class="card-img-top"
                   />
                   <div class="card-body">
@@ -392,7 +442,7 @@
             </div>
             <br />
             <div class="row g-3">
-              <div class="col-md-4">
+              <div class="col-md-6">
                 <div class="card h-100">
                   <img
                     src="images/video1.jpg"
@@ -406,7 +456,7 @@
                 </div>
               </div>
 
-              <div class="col-md-4">
+              <div class="col-md-6">
                 <div class="card h-100">
                   <img
                     src="images/video2.jpg"
@@ -420,11 +470,24 @@
                 </div>
               </div>
 
-              <div class="col-md-4">
+              <div class="col-md-6">
                 <div class="card h-100">
                   <img
                     src="images/video3.jpg"
                     alt="Video 3"
+                    class="card-img-top"
+                  />
+                  <div class="card-body">
+                    <h6 class="card-title">Bí quyết sống khỏe mỗi ngày</h6>
+                    <p class="small text-muted">Bí quyết sống khỏe mỗi ngày</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="card h-100">
+                  <img
+                    src="images/video2.jpg"
+                    alt="Video 2"
                     class="card-img-top"
                   />
                   <div class="card-body">
@@ -442,8 +505,246 @@
       </div>
     </div>
 
+    <div class="modal fade" id="accountModal">
+      <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h4 class="modal-title fw-bold">Đăng nhập / Đăng kí</h4>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+            ></button>
+          </div>
+
+          <div class="modal-body">
+            <!-- TAB -->
+            <ul class="nav nav-tabs" role="tablist">
+              <li class="nav-item">
+                <a class="nav-link active" data-bs-toggle="tab" href="#register"
+                  >Đăng ký</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" data-bs-toggle="tab" href="#login"
+                  >Đăng nhập</a
+                >
+              </li>
+            </ul>
+
+            <!-- TAB CONTENT -->
+            <div class="tab-content mt-3">
+              <!-- ĐĂNG KÝ -->
+              <div id="register" class="tab-pane fade show active">
+                <div class="row">
+                  <div class="col-12">
+                    <br />
+                    <h3 class="text-danger text-center fw-bold">
+                      Đăng kí thông tin
+                    </h3>
+                    <br />
+                    <div class="card p-4">
+                      <form class="was-validated">
+                        <div class="mb-3">
+                          <label class="form-label">Họ và tên</label>
+                          <input
+                            type="text"
+                            class="form-control"
+                            placeholder="Nhập họ và tên"
+                            required
+                          />
+                          <div class="valid-feedback">Hợp lệ</div>
+                          <div class="invalid-feedback">
+                            Vui lòng nhập họ và tên!
+                          </div>
+                        </div>
+
+                        <div class="mb-3">
+                          <label class="form-label">Email</label>
+                          <input
+                            type="email"
+                            class="form-control"
+                            placeholder="Nhập email"
+                            required
+                          />
+                          <div class="valid-feedback">Hợp lệ</div>
+                          <div class="invalid-feedback">
+                            Vui lòng nhập Email!
+                          </div>
+                        </div>
+
+                        <div class="mb-3">
+                          <label class="form-label">Số điện thoại</label>
+                          <input
+                            type="text"
+                            class="form-control"
+                            placeholder="Nhập số điện thoại"
+                            pattern="[0-9]{10}"
+                            required
+                          />
+                          <div class="valid-feedback">Hợp lệ</div>
+                          <div class="invalid-feedback">
+                            Số điện thoại phải gồm đúng 10 chữ số!
+                          </div>
+                        </div>
+
+                        <div class="mb-3">
+                          <label class="form-label">Mật khẩu</label>
+                          <input
+                            type="password"
+                            class="form-control"
+                            placeholder="Nhập mật khẩu"
+                            required
+                          />
+                          <div class="valid-feedback">Hợp lệ</div>
+                          <div class="invalid-feedback">
+                            Vui lòng nhập mật khẩu!
+                          </div>
+                        </div>
+
+                        <div class="mb-3">
+                          <label class="form-label">Xác nhận mật khẩu</label>
+                          <input
+                            type="password"
+                            class="form-control"
+                            placeholder="Nhập xác nhận mật khẩu"
+                            required
+                          />
+                          <div class="valid-feedback">Hợp lệ</div>
+                          <div class="invalid-feedback">
+                            Vui lòng nhập xác nhận mật khẩu!
+                          </div>
+                        </div>
+
+                        <div class="mb-3">
+                          <label class="form-label">Giới tính</label>
+                          <div class="form-check form-check-inline">
+                            <input
+                              type="radio"
+                              name="gender"
+                              class="form-check-input"
+                              required
+                            />
+                            <label class="form-check-label">Nam</label>
+                          </div>
+
+                          <div class="form-check form-check-inline">
+                            <input
+                              type="radio"
+                              name="gender"
+                              class="form-check-input"
+                            />
+                            <label class="form-check-label">Nữ</label>
+                          </div>
+                          <div class="valid-feedback">Hợp lệ</div>
+                          <div class="invalid-feedback d-block">
+                            Vui lòng chọn giới tính!
+                          </div>
+                        </div>
+
+                        <div class="mb-3">
+                          <label class="form-label">Ngôn ngữ</label>
+                          <select class="form-select" required>
+                            <option value="" selected disabled>
+                              Chọn ngôn ngữ
+                            </option>
+                            <option>Tiếng Việt</option>
+                            <option>Tiếng Anh</option>
+                            <option>Tiếng Trung</option>
+                            <option>Tiếng Nhật</option>
+                            <option>Tiếng Hàn</option>
+                            <option>Tiếng Lào</option>
+                            <option>Tiếng Thái Lan</option>
+                          </select>
+
+                          <div class="valid-feedback">Hợp lệ</div>
+                          <div class="invalid-feedback">
+                            Vui lòng chọn ngôn ngữ!
+                          </div>
+                        </div>
+
+                        <div class="mb-3">
+                          <div class="form-check">
+                            <input
+                              type="checkbox"
+                              class="form-check-input"
+                              required
+                            />
+                            <label class="form-check-label"
+                              >Tôi đồng ý với các điều khoản và điều
+                              kiện.</label
+                            >
+                          </div>
+                          <div class="valid-feedback">Hợp lệ</div>
+                          <div class="invalid-feedback">Vui lòng đồng ý!</div>
+                        </div>
+
+                        <div>
+                          <button type="submit" class="btn btn-primary">
+                            Đăng kí
+                          </button>
+                        </div>
+                      </form>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div id="login" class="tab-pane fade">
+                <div class="row justify-content-center">
+                  <div class="col-md-6">
+                    <br />
+                    <h3 class="text-danger text-center fw-bold">Đăng nhập</h3>
+                    <br />
+                    <div class="card p-4">
+                      <form class="was-validated">
+                        <div class="mb-3">
+                          <label class="form-label">Email</label>
+                          <input
+                            type="email"
+                            class="form-control"
+                            placeholder="Nhập Email"
+                            required
+                          />
+                          <div class="valid-feedback">Hợp lệ</div>
+                          <div class="invalid-feedback">
+                            Vui lòng nhập Email!
+                          </div>
+                        </div>
+
+                        <div class="mb-3">
+                          <label class="form-label">Mật khẩu</label>
+                          <input
+                            type="password"
+                            class="form-control"
+                            placeholder="Nhập mật khẩu"
+                            required
+                          />
+                          <div class="valid-feedback">Hợp lệ</div>
+                          <div class="invalid-feedback">
+                            Vui lòng nhập mật khẩu!
+                          </div>
+                        </div>
+
+                        <div>
+                          <button type="submit" class="btn btn-primary">
+                            Đăng nhập
+                          </button>
+                        </div>
+                      </form>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <footer class="bg-dark text-white mt-4 p-4">
       <p class="text-center mb-0">Nâng cao sức khỏe – Cân bằng cuộc sống</p>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
