ASSIGNMENT 1: cập nhật hình ảnh trang detail

--- a/ASSIGNMENT/Detail1.html
+++ b/ASSIGNMENT/Detail1.html
@@ -32,6 +32,11 @@
       body {
         padding-top: 80px;
       }
+      .detail-img {
+        max-height: 420px;
+        width: 100%;
+        object-fit: cover;
+      }
     </style>
   </head>
   <body>
@@ -214,7 +219,7 @@
           <img
             src="images/tap-piltes.jpg"
             alt="Phương pháp tập Pilates giúp phục hồi chấn thương cột sống"
-            class="img-fluid my-3"
+            class="img-fluid my-3 rounded shadow-sm detail-img"
           />
           <p>
             Pilates ban đầu được gọi là “Contrology” - một phương pháp tập thể
@@ -236,7 +241,7 @@
           <img
             src="images/tap-pilates1.jpg"
             alt="Phương pháp tập Pilates giúp phục hồi chấn thương cột sống"
-            class="img-fluid my-3"
+            class="img-fluid my-3 rounded shadow-sm detail-img"
           />
           <ul>
             <li>Bắt đầu với tư thế bò</li>
