--- a/ASSIGNMENT/Detail2.html
+++ b/ASSIGNMENT/Detail2.html
@@ -214,7 +214,7 @@
           <img
             src="images/tim-mach.jpg"
             alt="Phương pháp tập Pilates giúp phục hồi chấn thương cột sống"
-            class="img-fluid my-3"
+            class="img-fluid my-3 rounded shadow-sm detail-img"
           />
           <p>
             Tim mạch là nhóm bệnh lý liên quan đến tim và mạch máu, bao gồm các
@@ -237,7 +237,7 @@
           <img
             src="images/benh-tim-mach.jpg"
             alt="Tim mạch"
-            class="img-fluid my-3"
+            class="img-fluid my-3 rounded shadow-sm detail-img"
           />
           <ul>
             <li>Mệt mỏi và kiệt sức</li>
