--- a/ASSIGNMENT/Detail3.html
+++ b/ASSIGNMENT/Detail3.html
@@ -212,7 +212,7 @@
           <img
             src="images/Marketing.png"
             alt="Marketing"
-            class="img-fluid my-3"
+            class="img-fluid my-3 rounded shadow-sm detail-img"
           />
           <p>
             Marketing gồm những mảng nào? Đây là ngành có nhiều mảng đa dạng,
@@ -230,7 +230,7 @@
           <img
             src="images/Marketing2.jpg"
             alt="Phương pháp tập Pilates giúp phục hồi chấn thương cột sống"
-            class="img-fluid my-3"
+            class="img-fluid my-3 rounded shadow-sm detail-img"
           />
           <ul>
             <li>Có ít nhất 2 bên thành phần tham gia.</li>
