--- a/ASSIGNMENT/Detail4.html
+++ b/ASSIGNMENT/Detail4.html
@@ -213,7 +213,7 @@
           <img
             src="images/tap-the-duc-luc.jpg"
             alt="Tập thể dục"
-            class="img-fluid my-3"
+            class="img-fluid my-3 rounded shadow-sm detail-img"
           />
           <p>
             Chính đồng hồ sinh học của cơ thể sẽ quyết định bạn là “cú đêm” hay
@@ -233,7 +233,7 @@
           <img
             src="images/tap-the-duc2.jpg"
             alt="Tập thể dục"
-            class="img-fluid my-3"
+            class="img-fluid my-3 rounded shadow-sm detail-img"
           />
           <ul>
             <li>Bắt đầu với tư thế bò</li>
