ASSIGNMENT 1: Thêm bài viết liên quan ở các trang detail

--- a/ASSIGNMENT/Detail3.html
+++ b/ASSIGNMENT/Detail3.html
@@ -279,6 +279,95 @@
             </div>
           </div>
         </div>
+        <br />
+        <div class="card">
+          <div class="card-header fw-bold">
+            <i class="fa-solid fa-newspaper me-1"></i> Bài viết liên quan
+          </div>
+
+          <div class="card-body p-2">
+            <a href="Detail1.html" class="text-decoration-none text-dark">
+              <div class="d-flex mb-3">
+                <img
+                  src="images/tap-piltes.jpg"
+                  class="blog-aside-img me-2"
+                  alt="Phương pháp Pilates phục hồi cột sống"
+                />
+                <div>
+                  <h6 class="mb-1">Phương pháp Pilates phục hồi cột sống</h6>
+                  <small class="text-muted"
+                    >Pilates ban đầu được gọi là “Contrology” - một phương pháp
+                    tập thể dục toàn thân giúp người tập cải thiện các hoạt động
+                    hàng ngày. Pilates ngoài việc nhấn mạnh vào sức mạnh cốt lõi
+                    còn tập trung phát triển những mô hình chuyển động chức năng
+                    và bền vững xuyên suốt cơ thể.</small
+                  >
+                </div>
+              </div>
+            </a>
+
+            <a href="Detail2.html" class="text-decoration-none text-dark">
+              <div class="d-flex mb-3">
+                <img
+                  src="images/benh-tim-mach.jpg"
+                  class="blog-aside-img me-2"
+                  alt="Tim mạch là nhóm bệnh lý liên quan đến tim và mạch máu"
+                />
+                <div>
+                  <h6 class="mb-1">
+                    Tim mạch là nhóm bệnh lý liên quan đến tim và mạch máu
+                  </h6>
+                  <small class="text-muted mb-1"
+                    >Bệnh tim là một tình trạng bệnh lý liên quan đến các rối
+                    loạn của hệ thống tim mạch và mạch máu.</small
+                  >
+                </div>
+              </div>
+            </a>
+
+            <a href="Detail3.html" class="text-decoration-none text-dark">
+              <div class="d-flex mb-3">
+                <img
+                  src="images/Marketing.png"
+                  class="blog-aside-img me-2"
+                  alt="Marketing gồm những mảng nào?"
+                />
+                <div>
+                  <h6 class="mb-1">Marketing gồm những mảng nào?</h6>
+                  <small class="text-muted mb-1"
+                    >Theo một số tài liệu thì thuật ngữ Marketing xuất hiện lần
+                    đầu tiên tại Mỹ vào đầu thế kỷ 20 và được đưa vào Từ điển
+                    tiếng Anh năm 1944.</small
+                  >
+                </div>
+              </div>
+            </a>
+
+            <a href="Detail4.html" class="text-decoration-none text-dark">
+              <div class="d-flex mb-3">
+                <img
+                  src="images/tap-the-duc-luc.jpg"
+                  alt="Tập thể dục là một hoạt động rất có lợi cho sức khỏe"
+                  class="blog-aside-img me-2"
+                />
+
+                <div>
+                  <h6 class="mb-1">
+                    Tập thể dục là một hoạt động rất có lợi cho sức khỏe
+                  </h6>
+                  <small class="text-muted mb-1"
+                    >Chính đồng hồ sinh học của cơ thể sẽ quyết định bạn là “cú
+                    đêm” hay ưa dậy sớm. Những nhịp sinh học này tác động đến
+                    các chức năng của cơ thể như chỉ số huyết áp, nhiệt độ cơ
+                    thể, mức độ hormone hay nhịp tim, tất cả đều đóng vai trò
+                    quan trọng trong việc xác định cơ thể bạn có sẵn sàng tập
+                    thể dục hay không.</small
+                  >
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
       </div>
     </div>
     <div class="modal fade" id="loginModal">
